# nepomuk-subtitle-search

./: CMakeLists.txt
loader/: CMakeLists.txt  main.cpp  srtparser.cpp  srtparser.h  subtitleloader.cpp  subtitleloader.h
ontology/: CMakeLists.txt  nsbo.ontology.in  nsbo.trig
search/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
